--- a/githubjobsapi/pom.xml
+++ b/githubjobsapi/pom.xml
@@ -41,6 +41,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+		    <groupId>com.aol.simplereact</groupId>
+		    <artifactId>cyclops-react</artifactId>
+		    <version>2.1.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
